--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,89 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.container{
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 0 15px;
+  min-height: 100vh;
+}
+.header{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.dark-mode {
+background-color: black;
+}
+.dark-mode h1{
+  color: white
+}
+
+.note-list{
+  display: grid;
+  grid-gap: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+}
+
+.note{
+  background-color: bisque;
+  margin-bottom: 10px;
+  border-radius: 10px;
+  padding: 1rem;
+  min-height: 170px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  white-space: pre-wrap;
+}
+
+.note-footer{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.note.new {
+  background-color: aquamarine;
+}
+
+textarea{
+  border: none;
+  resize: none;
+  background-color: aquamarine;
+}
+
+textarea:focus{
+  outline: none;
+}
+
+.save{
+  background-color: antiquewhite;
+  border: none;
+  border-radius: 15px;
+  padding: 5px 10px;
+}
+.save:hover{
+  background-color:beige;
+  cursor: pointer;
+}
+
+.delete:hover{
+  cursor: pointer;
+}
+.search{
+display: flex;
+align-items: center;
+background-color: rgb(233,233,233);
+border-radius: 10px;
+padding: 5px;
+margin-bottom: 1.5em;
+}
+
+.search input{
+  border: none;
+  background-color: rgb(233,233,233);
+  outline: none;
+}
+
+
